# python_chat

./: .gitignore  README.md  grpc_client.py  grpc_server.py  pyproject.toml  websocket_client.py  websocket_server.py
proto/: chat.proto  chat_pb2.py  chat_pb2_grpc.py
